<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true" android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:background="@color/colorWhite">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="16sp" android:textColor="@color/colorCustomLightGrey"
            android:text="@string/schedule_where" fontPath="fonts/HelveticaLTStd-Light.otf"
            />

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="56dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_icon_address_schedule" android:layout_width="48dp"
                android:layout_height="48dp" android:orientation="horizontal"
                android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp" android:background="@drawable/round_bordered_background"
                android:gravity="center">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:scaleType="fitCenter" android:src="@drawable/icon_apartement"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_content_address_schedule" android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="vertical"
                android:layout_centerVertical="true" android:layout_toRightOf="@id/ll_icon_address_schedule"
                android:paddingLeft="16dp" android:paddingRight="16dp"
                android:gravity="center_vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_street_address_schedule" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="15sp"
                    android:textColor="@color/colorDarkGrey" android:text="@string/schedule_street_address"
                    fontPath="fonts/HelveticaLTStd-Light.otf"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="56dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_icon_add_address_schedule" android:layout_width="48dp"
                android:layout_height="48dp" android:orientation="horizontal"
                android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp" android:background="@drawable/customgrey_round_bordered_background"
                android:gravity="center">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:scaleType="fitCenter" android:src="@drawable/icon_add"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_content_add_address_schedule" android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="vertical"
                android:layout_centerVertical="true" android:layout_toRightOf="@id/ll_icon_add_address_schedule"
                android:paddingLeft="16dp" android:paddingRight="16dp"
                android:gravity="center_vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_street_add_address_schedule" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="15sp"
                    android:textColor="@color/colorCustomLightGrey" android:text="@string/schedule_add_address"
                    fontPath="fonts/HelveticaLTStd-Light.otf"/>

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="16sp" android:textColor="@color/colorCustomLightGrey"
            android:text="@string/schedule_when" fontPath="fonts/HelveticaLTStd-Light.otf"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="90dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_prev_date_schedule" android:layout_width="48dp"
                android:layout_height="48dp" android:orientation="horizontal"
                android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp" android:background="@drawable/round_bordered_background"
                android:gravity="center">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:scaleType="fitCenter" android:src="@drawable/icon_prev"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_content_date_schedule" android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:paddingLeft="16dp" android:paddingRight="16dp"
                android:gravity="center">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_content_month_schedule" android:layout_width="match_parent"
                    android:layout_height="19dp" android:textSize="15sp"
                    android:textColor="@color/colorDarkGrey" android:text="February"
                    fontPath="fonts/HelveticaLTStd-Light.otf" android:gravity="center"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_content_date_schedule" android:layout_width="match_parent"
                    android:layout_height="52dp" android:textSize="48sp"
                    android:textColor="@color/colorDarkGrey" android:text="29"
                    fontPath="fonts/HelveticaLTStd-Light.otf" android:gravity="center"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_content_day_schedule" android:layout_width="match_parent"
                    android:layout_height="19dp" android:textSize="15sp"
                    android:textColor="@color/colorDarkGrey" android:text="Friday"
                    fontPath="fonts/HelveticaLTStd-Light.otf" android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_next_date_schedule" android:layout_width="48dp"
                android:layout_height="46dp" android:orientation="horizontal"
                android:layout_centerVertical="true" android:layout_alignParentRight="true"
                android:layout_marginRight="5dp" android:background="@drawable/round_bordered_background"
                android:gravity="center">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:scaleType="fitCenter" android:src="@drawable/icon_next"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="56dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_prev_time_schedule" android:layout_width="46dp"
                android:layout_height="46dp" android:orientation="horizontal"
                android:layout_centerVertical="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp" android:background="@drawable/round_bordered_background"
                android:gravity="center" android:visibility="gone">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp" android:layout_height="24dp"
                    android:scaleType="fitCenter" android:src="@drawable/iv_arrow_left"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_content_time_schedule" android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:paddingLeft="16dp" android:paddingRight="16dp"
                android:gravity="center_vertical">

                <antistatic.spinnerwheel.WheelVerticalView
                    android:id="@+id/wheel_content_time_schedule"
                    android:layout_height="wrap_content" android:layout_width="match_parent"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_next_time_schedule" android:layout_width="46dp"
                android:layout_height="46dp" android:orientation="horizontal"
                android:layout_centerVertical="true" android:layout_alignParentRight="true"
                android:layout_marginRight="5dp" android:background="@drawable/round_bordered_background"
                android:gravity="center" android:visibility="gone">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="24dp" android:layout_height="24dp"
                    android:scaleType="fitCenter" android:src="@drawable/iv_arrow_right"
                    />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            >

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent" android:layout_height="44dp"
                android:layout_alignParentBottom="true" android:layout_marginBottom="10dp"
                android:ems="10" android:inputType="text"
                android:hint="@string/schedule_info" android:textSize="13sp"
                fontPath="fonts/HelveticaLTStd-Light.otf" android:gravity="center"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
